# Legal_Finance_RAG

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  DATA_COLLECTION_LOG.md  DATA_SOURCES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  Makefile  PORTFOLIO_CHECKLIST.md  PORTFOLIO_TRANSFORMATION_COMPLETE.md  PRODUCTION_HARDENING_COMPLETE.md  QUICKSTART.md  QUICK_START.md  README.md  README_TOOLS_ENHANCEMENT.md  RENDER_DEPLOYMENT.md  START_HERE_DEPLOYMENT.md  TOOL_ENHANCEMENT_GUIDE.md  TOOL_QUICK_REFERENCE.md  audit_output.txt  debug_acts.html  debug_circulars.html  debug_notifications.html  find_keys.py  health_output.json  ingestion_log.txt  pip_out.txt  pyproject.toml  pyrightconfig.json  pytest_isolation_out.txt  query_output.json  render.yaml  render_app.py  requirements-dev.txt  requirements.txt  ruff_final.txt  (+23 more)
.claude/: settings.local.json
.streamlit/: config.toml
app/: config.py  legal_disclaimers.py  main.py  tasks.py
docker/: Dockerfile.api  Dockerfile.chainlit  Dockerfile.frontend  docker-compose.monitoring.yml  docker-compose.yml
evaluation/: __init__.py  evaluator.py  golden_dataset.py  reporter.py  runner.py
frontend/: README.md  app.py  config.py
frontend-nextjs/: Dockerfile  FEATURES_IMPLEMENTED.md  SETUP_GUIDE.md  docker-compose.override.yml  next.config.ts  package-lock.json  package.json  quickstart.bat  quickstart.sh  tailwind.config.ts
scripts/: audit.py  backup_chroma.py  beta_and_production_rollout.py  check_count.py  cleanup_user_uploads.py  download_all_missing.py  (+23 more)
(+361 files in other folders)
